--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "direwolf-modeler",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "The Direwolf Modeler is an online collaborative modeling environment.",
   "author": "direwolf-modeler",
   "license": "MIT",
@@ -15,19 +15,19 @@
     "start:compatibility": "es-dev-server --app-index demo/index.html --compatibility all --node-resolve --open --watch"
   },
   "dependencies": {
-    "@material/mwc-icon-button": "^0.9.0",
+    "@material/mwc-icon-button": "^0.12.0",
     "@material/mwc-tab": "^0.12.0",
     "@material/mwc-tab-bar": "^0.12.0",
-    "@material/mwc-top-app-bar-fixed": "^0.9.0",
-    "direwolf-elements": "~0.0.0",
+    "@material/mwc-top-app-bar-fixed": "^0.12.0",
+    "direwolf-elements": "0.0.2",
     "kld-intersections": "^0.6.0",
-    "lit-element": "^2.0.1",
-    "lit-html": "^1.0.0",
+    "lit-element": "^2.2.1",
+    "lit-html": "^1.1.2",
     "svg.js": "^2.7.1",
-    "y-websocket": "^1.0.4",
-    "yjs": "^13.0.0-99"
+    "y-websocket": "1.2.0",
+    "yjs": "13.0.1"
   },
   "devDependencies": {
-    "es-dev-server": "^1.5.0"
+    "es-dev-server": "^1.36.4"
   }
 }
