--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "@material/mwc-tab": "^0.12.0",
     "@material/mwc-tab-bar": "^0.12.0",
     "@material/mwc-top-app-bar-fixed": "^0.12.0",
+    "@svgdotjs/svg.js": "^3.0.16",
     "direwolf-elements": "0.0.2",
     "kld-intersections": "^0.6.0",
     "lit-element": "^2.2.1",
     "lit-html": "^1.1.2",
-    "svg.js": "^2.7.1",
     "y-websocket": "1.2.0",
     "yjs": "13.0.1"
   },
