--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "@material/mwc-tab-bar": "^0.12.0",
     "@material/mwc-top-app-bar-fixed": "^0.12.0",
     "@svgdotjs/svg.js": "^3.0.16",
-    "direwolf-elements": "0.0.2",
+    "direwolf-elements": "^0.0.4",
     "kld-intersections": "^0.6.0",
     "lit-element": "^2.2.1",
     "lit-html": "^1.1.2",
-    "y-websocket": "1.2.0",
-    "yjs": "13.0.1"
+    "y-websocket": "^1.2.1",
+    "yjs": "^13.0.4"
   },
   "devDependencies": {
-    "es-dev-server": "^1.36.4"
+    "es-dev-server": "^1.40.0"
   }
 }
