--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "start:compatibility": "es-dev-server --app-index demo/index.html --compatibility all --node-resolve --open --watch"
   },
   "dependencies": {
-    "@material/mwc-icon-button": "^0.12.0",
-    "@material/mwc-tab": "^0.12.0",
-    "@material/mwc-tab-bar": "^0.12.0",
-    "@material/mwc-top-app-bar-fixed": "^0.12.0",
+    "@material/mwc-button": "^0.13.0",
+    "@material/mwc-dialog": "^0.13.0",
+    "@material/mwc-icon-button": "^0.13.0",
+    "@material/mwc-tab": "^0.13.0",
+    "@material/mwc-tab-bar": "^0.13.0",
+    "@material/mwc-top-app-bar-fixed": "^0.13.0",
     "@svgdotjs/svg.js": "^3.0.16",
     "direwolf-elements": "^0.0.4",
     "kld-intersections": "^0.6.0",
