--- a/package.json
+++ b/package.json
@@ -11,26 +11,24 @@
     "url": "https://github.com/direwolf/direwolf-modeler"
   },
   "scripts": {
-    "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
-    "start:compatibility": "es-dev-server --app-index demo/index.html --compatibility all --node-resolve --open --watch"
+    "start": "web-dev-server --app-index demo/index.html --node-resolve --open --watch"
   },
   "dependencies": {
-    "@material/mwc-button": "^0.13.0",
-    "@material/mwc-dialog": "^0.13.0",
-    "@material/mwc-icon-button": "^0.13.0",
-    "@material/mwc-tab": "^0.13.0",
-    "@material/mwc-tab-bar": "^0.13.0",
-    "@material/mwc-top-app-bar-fixed": "^0.13.0",
+    "@material/mwc-button": "^0.21.0",
+    "@material/mwc-dialog": "^0.21.0",
+    "@material/mwc-icon-button": "^0.21.0",
+    "@material/mwc-tab": "^0.21.0",
+    "@material/mwc-tab-bar": "^0.21.0",
+    "@material/mwc-top-app-bar-fixed": "^0.21.0",
     "@svgdotjs/svg.js": "^3.0.16",
-    "browser-nativefs": "^0.8.2",
-    "direwolf-elements": "^0.0.4",
+    "browser-fs-access": "^0.17.2",
+    "direwolf-elements": "direwolf/direwolf-elements#develop",
     "kld-intersections": "^0.7.0",
-    "lit-element": "^2.2.1",
-    "lit-html": "^1.1.2",
-    "y-websocket": "^1.3.3",
-    "yjs": "^13.3.2"
+    "lit": "^2.0.0-rc.2",
+    "y-websocket": "^1.3.14",
+    "yjs": "^13.5.6"
   },
   "devDependencies": {
-    "es-dev-server": "^1.57.2"
+    "@web/dev-server": "^0.1.17"
   }
 }
